--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
 <!-- mobile-10 -->
 <div class="mobile-10 mx-3">
     <div class="py-4 mt-4 px-4">
-        <p class="ms-10-first">Our Partners and Affiliations</p>
+        <p class="ms-10-first text-center">Our Partners and Affiliations</p>
        <div class="text-center">
         <img src="imgs/Group 9095.png" alt="" >
         <img src="imgs/Group 9099.png" alt="" class="pt-3">
